pw/branches/r1117/Vendor/FLSDK/PsaApi.h

//
//	Common functions
//

//
//	Description:
//		Dummy reference (simply returns the control). Linker can exclude
//		protect.dll from import table if no functions are used. So, this
//		function can be inserted into any part of application code to
//		prevent this.
//
void __stdcall PSA_DummyFunction();
//
//	Description:
//		Uninitialize protection core resources before unloading of protect.dll
//		or before exit.
//		The protection core can create threads for periodical checking of
//		license expiration etc. If protect.dll will be unloaded using
//		FreeLibrary( someProtectedDllHandle ) these threads will be	stopped
//		by operating system and resources that are allocated in these threads
//		will not be freed. It can lead to resource leaks if	the protected .DLL
//		is loaded and unloaded many times.
//		If you protect only .EXE files or there are no multiple
//		loading/unloading of protected .DLL files the call to this function
//		is not mandatory.
//
//	Output:
//		Return value - PSC_STATUS_SUCCESS or error code
//
unsigned __int32 __stdcall PSA_Uninitialize();
//
//	Description:
//		Get registry path and base handle for license.
//
//	Input:
//		pathBuffer					- buffer for path
//		pathBufferSizeInWideChars	- buffer size
//		registryBaseHandle			- buffer for base handle
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//			(PSC_STATUS_BUFFER_TOO_SMALL if buffer is too small)
//		*pathBuffer					- path (Unicode zero-terminated string)
//		*pathBufferSizeInWideChars	- used buffer size (or required buffer
//			size is return value is PSC_STATUS_BUFFER_TOO_SMALL)
//		*registryBaseHandle			- buffer for base handle
//
unsigned __int32 __stdcall PSA_GetLicenseStoragePath(
	wchar_t *pathBuffer,
	size_t *pathBufferSizeInWideChars,
	HANDLE *registryBaseHandle );
// License version (see PSA_GetLicenseInformation)
#define LIC_VERSION_UNDEFINED								0xFFFFFFFF
#define LIC_VERSION_0_DISC									0
#define LIC_VERSION_1_HARDWARE								1
// License types (see PSA_GetLicenseInformation)
#define LIC_TYPE_UNDEFINED									0xFFFFFFFF
#define LIC_TYPE_HARDWARE									0
#define LIC_TYPE_HARDWARE_TRIAL								1
#define LIC_TYPE_HARDWARE_RESCUE							2
#define LIC_TYPE_HARDWARE_AUTOGENERATED_AFTER_DISC_CHECK	3
#define LIC_TYPE_DISC										4
//
//	Description:
//		Get special information for current license.
//
//	Input:
//		version			- buffer for license version
//		type			- buffer for license type
//		nonCommercial	- buffer for non-commercial flag
//
//	Output:
//		Return value	- PSC_STATUS_SUCCESS or error code
//		*version		- license version
//		*type			- license type
//		*nonCommercial	- non-commercial flag
//
//	Registry keys for debugging:
//		"LicenseVersion", "LicenseType", "IsNonCommercialLicense" of type
//		REG_DWORD (initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_GetLicenseInformation(
	unsigned __int32 *version,
	unsigned __int32 *type,
	bool *nonCommercial );
// Codes of independent features that can be granted by license
#define PSA_GrantedFeature0			0x00000001
#define PSA_GrantedFeature1			0x00000002
#define PSA_GrantedFeature2			0x00000004
#define PSA_GrantedFeature3			0x00000008
#define PSA_GrantedFeature4			0x00000010
#define PSA_GrantedFeature5			0x00000020
#define PSA_GrantedFeature6			0x00000040
#define PSA_GrantedFeature7			0x00000080
#define PSA_GrantedFeature8			0x00000100
#define PSA_GrantedFeature9			0x00000200
#define PSA_GrantedFeature10		0x00000400
#define PSA_GrantedFeature11		0x00000800
#define PSA_GrantedFeature12		0x00001000
#define PSA_GrantedFeature13		0x00002000
#define PSA_GrantedFeature14		0x00004000
#define PSA_GrantedFeature15		0x00008000
#define PSA_GrantedFeature16		0x00010000
#define PSA_GrantedFeature17		0x00020000
#define PSA_GrantedFeature18		0x00040000
#define PSA_GrantedFeature19		0x00080000
#define PSA_GrantedFeature20		0x00100000
#define PSA_GrantedFeature21		0x00200000
#define PSA_GrantedFeature22		0x00400000
#define PSA_GrantedFeature23		0x00800000
#define PSA_GrantedFeature24		0x01000000
#define PSA_GrantedFeature25		0x02000000
#define PSA_GrantedFeature26		0x04000000
#define PSA_GrantedFeature27		0x08000000
#define PSA_GrantedFeature28		0x10000000
#define PSA_GrantedFeature29		0x20000000
#define PSA_GrantedFeature30		0x40000000
#define PSA_GrantedFeature31		0x80000000
//
//	Description:
//		Get a set of features granted by license (bit mask).
//		For example, this function can return the value	*features = 9,
//		i.e. ( PSA_GrantedFeature0 | PSA_GrantedFeature3 ).
//		This function returns *features = 0 for demo mode (if demo mode has
//		been enabled).
//
//	Input:
//		features		- buffer for feature set
//
//	Output:
//		*features		- feature set
//		Return value	- PSC_STATUS_SUCCESS or error code
//
//	Registry keys for debugging:
//		"FeatureSetGrantedByLicense" of type REG_DWORD (initialized at
//		loading of protect.dll).
//
unsigned __int32 __stdcall PSA_GetFeaturesGrantedByLicense(
	unsigned __int32 *features );
//
//	Description:
//		Disable features granted by license for limitation of application
//		functionality "on the fly" e.g. after expiration of license (only
//		enabled features will be disabled, so, 0xFFFFFFFF is valid argument
//		for disabling of all features).
//
//	Input:
//		features		- buffer for feature set mask
//
//	Output:
//		Return value	- PSC_STATUS_SUCCESS or error code
//
unsigned __int32 __stdcall PSA_DisableFeaturesGrantedByLicense(
	unsigned __int32 features );
//
//	Description:
//		Check rights granted by license and display error dialog on error.
//		This function works only in SDK mode. In normal protected application
//		is does nothing.
//
//	Input:
//		features		- features mask to check (the check succeed if
//			at least one bit from the mask is set in current license)
//
//	Output:
//		Return value	- PSC_STATUS_SUCCESS if the check succeeds or fails
//			or error code on internal error
//
unsigned __int32 __stdcall PSA_CheckFeaturesGrantedByLicense(
	unsigned __int32 features );
//
//	Description:
//		Check if the application is running in demo mode.
//
//	Input:
//		isDemoMode		- buffer for demo mode flag
//
//	Output:
//		Return value	- PSC_STATUS_SUCCESS or error code
//		*isDemoMode		- demo mode flag
//
//	Registry keys for debugging:
//		"IsDemoMode" of type REG_DWORD (initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_IsDemoMode(
	bool *isDemoMode );
//
//	Description:
//		Check if the application is running in trial mode.
//
//	Input:
//		isTrialMode		- buffer for trial mode flag
//
//	Output:
//		Return value	- PSC_STATUS_SUCCESS or error code
//		*isTrialMode	- trial mode flag
//
//	Registry keys for debugging:
//		"IsTrialMode" of type REG_DWORD (initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_IsTrialMode(
	bool *isTrialMode );
//
//	Description:
//		Check if the license is already expired.
//
//	Input:
//		isLicenseExpired	- buffer for license expired flag
//
//	Output:
//		Return value		- PSC_STATUS_SUCCESS or error code
//		*isLicenseExpired	- license expired flag
//		updateRunTimeData	- flag for updating of license usage history
//
//	Registry keys for debugging:
//		"IsLicenseExpired" of type REG_DWORD (reinitialized at each call).
//
unsigned __int32 __stdcall PSA_IsLicenseExpired(
	bool *isLicenseExpired, bool updateRunTimeData );
//
//	Description:
//		Get the time before expiration of license.
//
//	Input:
//		timeToLicenseExpiration		- buffer for time
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//		*timeToLicenseExpiration	- time before expiration of license in
//			100 ns intervals (0 - license expired, ~0ui64 - undefined or
//			infinite)
//
//	Registry keys for debugging:
//		"TimeToLicenseExpiration" of type REG_BINARY and length 8 bytes
//		(reinitialized at each call).
//
unsigned __int32 __stdcall PSA_GetTimeToLicenseExpiration(
	unsigned __int64 *timeToLicenseExpiration );
//
//	Description:
//		Get date and time of license expiration.
//
//	Input:
//		licenseExpirationDateTime	- buffer for date and time
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//		*licenseExpirationDateTime	- date and time of license expiration in
//			file time format, i.e. number of 100 ns intervals elapsed since
//			January 1, 1601 (~0ui64 - undefined or infinite)
//
//	Registry keys for debugging:
//		"LicenseExpirationDateTime" of type REG_BINARY and length 8 bytes
//		(initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_GetLicenseExpirationDateTime(
	unsigned __int64 *licenseExpirationDateTime );
//
//	Description:
//		Get life time limit of license (i.e. time before expiration of license
//		from the moment of license creation, as assigned by e.g. activation
//		key).
//
//	Input:
//		licenseLifeTimeLimit	- buffer for life time limit
//
//	Output:
//		Return value			- PSC_STATUS_SUCCESS or error code
//		*licenseLifeTimeLimit	- life time limit in 100 ns intervals
//			(~0ui64 - undefined or infinite).
//
//	Registry keys for debugging:
//		"LicenseLifeTimeLimit" of type REG_BINARY and length 8 bytes
//		(initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_GetLicenseLifeTimeLimit(
	unsigned __int64 *licenseLifeTimeLimit );
//
//	Description:
//		Get remaining number of runs.
//
//	Input:
//		remainingNumberOfRuns	- buffer for remaining number of runs
//
//	Output:
//		Return value			- PSC_STATUS_SUCCESS or error code
//		*remainingNumberOfRuns	- remaining number of runs (~0ui32 - undefined
//			or infinite)
//
//	Registry keys for debugging:
//		"RemainingNumberOfRuns" of type REG_DWORD (initialized at loading of
//		protect.dll).
//
unsigned __int32 __stdcall PSA_GetRemainingNumberOfRuns(
	unsigned __int32 *remainingNumberOfRuns );
//
//	Description:
//		Get limit for number of runs (i.e. total allowed number of runs, as
//		assigned by e.g. activation key).
//
//	Input:
//		remainingNumberOfRuns	- buffer for limit of number of runs
//
//	Output:
//		Return value			- PSC_STATUS_SUCCESS or error code
//		*remainingNumberOfRuns	- limit of number of runs (~0ui32 - undefined
//			or infinite)
//
//	Registry keys for debugging:
//		"LicenseNumberOfRunsLimit" of type REG_DWORD (initialized at loading of
//		protect.dll).
//
unsigned __int32 __stdcall PSA_GetLicenseNumberOfRunsLimit(
	unsigned __int32 *licenseNumberOfRunsLimit );
//
//	Description:
//		Get remaining execution time of application, calculated in the current
//		moment.
//
//	Input:
//		remainingExecutionTime	- buffer for remaining execution time
//
//	Output:
//		Return value			- PSC_STATUS_SUCCESS or error code
//		*remainingExecutionTime	- remaining execution time in 100 ns intervals
//			(0 - license expired, ~0ui64 - undefined or infinite)
//
//	Registry keys for debugging:
//		"RemainingExecutionTime" of type REG_BINARY and length 8 bytes
//		(reinitialized at each call).
//
unsigned __int32 __stdcall PSA_GetRemainingExecutionTime(
	unsigned __int64 *remainingExecutionTime );
//
//	Description:
//		Get remaining execution time of application, calculated in the moment
//		of start of application.
//
//	Input:
//		remainingExecutinTimeAtStart	- buffer for remaining execution time
//
//	Output:
//		Return value					- PSC_STATUS_SUCCESS or error code
//		*remainingExecutinTimeAtStart	- remaining execution time in 100 ns
//			intervals (0 - license expired, ~0ui64 - undefined or infinite)
//
//	Registry keys for debugging:
//		"RemainingExecutionTimeAtStart" of type REG_BINARY and length 8 bytes
//		(initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_GetRemainingExecutionTimeAtStart(
	unsigned __int64 *remainingExecutinTimeAtStart );
//
//	Description:
//		Get limit for execution time of application(i.e. total allowed
//		execution time assigned by e.g. activation key).
//
//	Input:
//		licenseExecutionTimeLimit	- buffer for limit of execution time
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//		*licenseExecutionTimeLimit	- limit of execution time in 100 ns
//			intervals (~0ui64 - undefined or infinite)
//
//	Registry keys for debugging:
//		"LicenseExecutionTimeLimit" of type REG_BINARY and length 8 bytes
//		(initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_GetLicenseExecutionTimeLimit(
	unsigned __int64 *licenseExecutionTimeLimit );
//
//	Description:
//		Get user-defined field.
//
//	Input:
//		userDefinedField	- buffer for user-defined field
//
//	Output:
//		Return value		- PSC_STATUS_SUCCESS or error code
//		*userDefinedField	- user-defined field (0xFFFF if undefined)
//
//	Registry keys for debugging:
//		"UserDefinedField16Bits" of type REG_DWORD (initialized at loading
//		of protect.dll).
//
unsigned __int32 __stdcall PSA_GetUserDefinedField16Bits(
	unsigned __int16 *userDefinedField );
//	Description:
//		Get the label of disc with that the check was passed.
//
//	Input:
//		labelBuffer					- buffer for disc label
//		labelBufferSizeInWideChars	- buffer size
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//			(PSC_STATUS_BUFFER_TOO_SMALL if buffer is too small)
//		*labelBuffer				- label (Unicode zero-terminated string)
//		*labelBufferSizeInWideChars	- used buffer size (or required buffer
//			size is return value is PSC_STATUS_BUFFER_TOO_SMALL)
//
//	Registry keys for debugging:
//		"DiscLabel" of type REG_SZ (initialized at loading of protect.dll).
//
unsigned __int32 __stdcall PSA_GetDiscLabel(
	wchar_t *labelBuffer,
	size_t *labelBufferSizeInWideChars );
//
//	Description:
//		Set external binding check success flag. By default flag 
//		is cleared.
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//
unsigned __int32 __stdcall PSA_ExternalBindingCheckSetSucceedFlag();
//
//	Description:
//		Clear external binding check success flag. By default flag 
//		is cleared.
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//
unsigned __int32 __stdcall PSA_ExternalBindingCheckSetFailedFlag();
//  Description:
//		Return result of integrity checks of loaded files.
//
//  Input:
//		fileCheckResultOk 			- pointer to output variable set to true if
//			all of protected files loaded not corrupted set to false if hash
//			check for one or more files failed
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//
unsigned __int32 __stdcall PSA_GetCheckFilesHashResult( 
	bool *fileCheckResultOk );
//
//  Description:
//		Check read-only memory regions of protected modules, calculates hash
//		and compare to hash value stored in protection library
//
//  Input:
//		memCheckResultOk 			- pointer to output variable, set to true
//			if read only memory for all protected modules remains unchanged,
//			set to false if memory changed for one or more modules
//
//	Output:
//		Return value				- PSC_STATUS_SUCCESS or error code
//
unsigned __int32 __stdcall PSA_CheckProtectedModulesReadOnlyMem( 
	bool *memCheckResultOk );